Add device viewport metatag.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Joint Land Use Study - Naval Weapons Station Earle</title>
     <meta name="description" content="Joint Land Use Study - Naval Weapons Station Earle">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             background-color: #034166;
