Remove "Meeting" from two nav links.

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
     <ul>
          <li>
             <a href="pdfs/JLUS Public Meeting flyer 3-28-17.pdf">
-                March 28 2017 Meeting<br> Public Open House Flyer
+                March 28 2017<br> Public Open House Flyer
             </a>
         </li>
         <li>
             <a href="pdfs/Public Involvement Strategy 3-14-17 rev. final.pdf">
-                March 14 2017 Meeting<br> Public Involvement Strategy
+                March 14 2017<br> Public Involvement Strategy
             </a>
         </li>
         <li>
