--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 May 23 2017<br>Policy Committee & General Advisory Committee NWS Earle Base Tour Photos
             </a>
         </li>
+        <li>
+            <a href="pdfs/Photos from the Earle JLUS Public Open House.pdf">
+                March 28 2017<br>Public Open House Photos
+            </a>
+        </li>
          <li>
             <a href="pdfs/JLUS Public Meeting flyer 3-28-17.pdf">
                 March 28 2017<br> Public Open House Flyer
