Add content Prelim Recommendations to Public 9-19-17.pdf JLUS Public Meeting 2 Flyer 9-27-17.pdf

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
 <div id="navigation">
     <ul>
         <li>
+            <a href="pdfs/JLUS Public Meeting 2 Flyer 9-27-17.pdf">
+                September 27 2017<br>Public Open House #2 Flyer (Review Recommendations)
+            </a>
+        </li>
+        <li>
+            <a href="pdfs/Prelim Recommendations to Public 9-19-17.pdf">
+                September 19 2017<br>Preliminary Recommendations
+            </a>
+        </li>
+        <li>
             <a href="pdfs/Photos from the Earle JLUS Base Tour.pdf">
                 May 23 2017<br>Policy Committee & General Advisory Committee NWS Earle Base Tour Photos
             </a>
