Add content JLUS Public Meeting 3 Flyer 12-07-17.pdf Photos from the Earle JLUS Outreach Meeting.pdf

--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
 <div id="navigation">
     <ul>
         <li>
+            <a href="pdfs/JLUS Public Meeting 3 Flyer 12-07-17.pdf">
+                December 7 2017<br>Public Presentation Flyer (Final Recommendations)
+            </a>
+        </li>
+        <li>
+            <a href="pdfs/Photos from the Earle JLUS Outreach Meeting.pdf">
+                September 27 2017<br>Public Open House #2 Photos
+            </a>
+        </li>
+        <li>
             <a href="pdfs/JLUS Public Meeting 2 Flyer 9-27-17.pdf">
                 September 27 2017<br>Public Open House #2 Flyer (Review Recommendations)
             </a>
